<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/bigTitle"
        android:layout_margin="20dp"
        android:text="@string/details_title" />

    <GridLayout
        android:id="@+id/accountGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="6"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iban_label"
            style="@style/baseDetailsLabel"
            />
        <TextView
            android:id="@+id/detailsIban"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iban"
            style="@style/baseDetails"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner_label"
            style="@style/baseDetailsLabel"
            />
        <TextView
            android:id="@+id/detailsOwnerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/baseDetails"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            style="@style/baseDetailsLabel"
            />
        <TextView
            android:id="@+id/detailsOwnerEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            style="@style/baseDetails"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_label"
            style="@style/baseDetailsLabel"
            />
        <TextView
            android:id="@+id/detailsCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency"
            style="@style/baseDetails"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bic_label"
            style="@style/baseDetailsLabel"
            />
        <TextView
            android:id="@+id/detailsBIC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bic"
            style="@style/baseDetails"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_label"
            style="@style/baseDetailsLabel"
            />
        <TextView
            android:id="@+id/detailsBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            style="@style/baseDetails"
            />
    </GridLayout>
    <GridLayout
        android:id="@+id/depositGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:visibility="gone"
        android:rowCount="4">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/months_label"
            style="@style/baseDetailsLabel"
            />
        <TextView
            android:id="@+id/nrMonthsDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/months"
            style="@style/baseDetails"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interest_rate_label"
            style="@style/baseDetailsLabel"
            />
        <TextView
            android:id="@+id/interestRateDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interest_rate"
            style="@style/baseDetails"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date_label"
            style="@style/baseDetailsLabel"
            />
        <TextView
            android:id="@+id/dueDateDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            style="@style/baseDetails"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/renewal_label"
            style="@style/baseDetailsLabel"
            />
        <TextView
            android:id="@+id/renewalDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/renewal"
            style="@style/baseDetails"
            />

    </GridLayout>
</LinearLayout>